--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,9 @@ I Will Make This <font color="#D69E3A"><b>PLANET</b></font> a Better Place,<br/>
     <string name="place_to_visit_usa">Place To Visit_USA</string>
     <string name="media_library">Media Library</string>
     <string name="media_height">Media Height :</string>
+    <string name="layout">Layout :</string>
+
+
 </resources>
 
 
